# suiscan

./: .gitignore  README.md  pyproject.toml
config/: README.md
src/: __init__.py  main.py
src/data/: __init__.py  fetcher.py
suiscan/: main.py
